--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,3 @@
 Achte darauf, dass ein LIKE Filter nur für VARCHAR Felder Sinn macht, numerische Felder sollten anders abgeglichen werden. -> Genau sollte < oder > nur bei numerischen Feldern verwendet werden.
+LIKE FIXEN
 Validation sofort im Command ausführen, nicht erst im Service
